@@ -24,17 +24,13 @@
 
 package net.kyrptonaught.jankson.api;
 
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 
 public final class Escaper {
     private static final Set<Character.UnicodeBlock> DEFAULT_BLOCKS;
 
     static {
-        HashSet<Character.UnicodeBlock> tmp = new HashSet<>();
-        tmp.add(Character.UnicodeBlock.BASIC_LATIN);
-        DEFAULT_BLOCKS = Collections.unmodifiableSet(tmp);
+        DEFAULT_BLOCKS = Set.of(Character.UnicodeBlock.BASIC_LATIN);
     }
 
     private Escaper() {
@@ -45,8 +41,8 @@ public final class Escaper {
     }
 
     /**
-     * Escapes a string such that the result is valid as the contents of a java, js, or json string,
-     * and the javascript unescape() function will restore the original string. Additionally, this
+     * Escapes a string such that the result is valid as the contents of a java, js, or JSON string,
+     * and the JavaScript unescape() function will restore the original string. Additionally, this
      * method attempts to do the minimum amount of escaping required to accomplish these goals.
      *
      * @param s         The String to escape special characters in
@@ -93,21 +89,13 @@ public final class Escaper {
                     }
                     break;
                 default:
-                    if (Character.isBmpCodePoint(ch)) {
-                        //Use unicode notation if it's not especially printable - lies in a special unicode block, is a control character, etc.
-                        Character.UnicodeBlock block = Character.UnicodeBlock.of(ch);
+                    //Use Unicode notation if it's not especially printable - lies in a special Unicode block, is a control character, etc.
+                    Character.UnicodeBlock block = Character.UnicodeBlock.of(ch);
 
-                        if (ch != 65535 && !Character.isISOControl(ch) && block != null && unquotedBlocks.contains(block)) { //Note: 65535 is the value of awt's KeyEvent.CHARACTER_UNDEFINED. Just in case it leaks into a document.
-                            result.append(ch);
-                        } else {
-                            result.append(unicodeEscape(ch));
-                        }
+                    if (ch != 65535 && !Character.isISOControl(ch) && block != null && unquotedBlocks.contains(block)) { //Note: 65535 is the value of awt's KeyEvent.CHARACTER_UNDEFINED. Just in case it leaks into a document.
+                        result.append(ch);
                     } else {
-                        //Always use Unicode notation
-                        i++;
-                        char upper = s.charAt(i);
-                        int codePoint = Character.toCodePoint(ch, upper);
-                        result.append(unicodeEscape(codePoint));
+                        result.append(unicodeEscape(ch));
                     }
                     break;
             }
@@ -116,8 +104,8 @@ public final class Escaper {
     }
 
     private static String unicodeEscape(int codePoint) {
-        String codeString = Integer.toHexString(codePoint);
-        while (codeString.length() < 4) codeString = "0" + codeString;
+        StringBuilder codeString = new StringBuilder(Integer.toHexString(codePoint));
+        while (codeString.length() < 4) codeString.insert(0, "0");
         return "\\u" + codeString;
     }
 
